3.2/mule-user-guide/multicast-transport-reference.adoc
= Multicast Module Reference

== Introduction

The http://en.wikipedia.org/wiki/Multicast[Multicast] transport allow sending messages to or receiving messages from groups of multicast sockets. It is implemented on top of link:/documentation-3.2/display/32X/UDP+Transport+Reference[UDP] and is highly scalable since knowledge of the receivers is not required.

== Namespace and Syntax

XML namespace:

[source]
----
xmlns:multicast="http://www.mulesoft.org/schema/mule/multicast"
----

XML Schema location:

[source]
----
http://www.mulesoft.org/schema/mule/multicast http://www.mulesoft.org/schema/mule/multicast/3.2/mule-multicast.xsd
----

Connector syntax:

[source]
----
<multicast:connector name="mcConnector" receiveBufferSize="1024" sendBufferSize="1024"               timeout="0" keepSendSocketOpen="false" broadcast="false"               timeToLive="127" loopback="true'/>
----

Endpoint syntax:
You can define your endpoints two different ways:

. Prefixed endpoint:

[source]
----
<multicast:inbound-endpoint host="localhost" port="65433"/>
----

. Non-prefixed URI:

[source]
----
<inbound-endpoint address="multicast://localhost:65433"/>
----

See the sections below for more information.

== Considerations

IP Multicasting is a service provided by IP (the internet protocol layer), that allows one-to-many communication. The most common use of IP Multicasting is to send UDP datagrams to multiple sockets located on different systems. Mule supports this with the Multicast transport. Note that, except for the communication being many-to-one instead of one-to-one, the Multicast transport is very similar to the link:/documentation-3.2/display/32X/UDP+Transport+Reference[UDP transport] and the same considerations should be observed.

As shown in the examples below, the Multicast transport has two purposes:

* Send messages to a group of IP Multicasting sockets
* Read messages sent to a group of IP Multicasting sockets

== Features

The Multicasting module allows a Mule application both to send and receive IP Multicasting datagrams, and to declaratively customize the following features of IP Multicasting (with the standard name for each feature, where applicable):

* The timeout for sending or receiving messages (SO_TIMEOUT).
* Whether to allow sending broadcast messages (SO_BROADCAST).
* Whether to close a socket after sending a message.
* The maximum size of messages that can be received.
* The time to live for the packets that are sent.
* Whether to loop packets back to the local socket.

Multicast endpoints can be used in one of two ways:

* To receive an IP Multicasting datagram, create an inbound Multicast endpoint.
* To send an IP Multicasting datagram, create an outbound Multicast endpoint.

== Usage

To use Multicast endpoints

* Add the MULE Multicast namespace to your configuration:
** Define the multicast prefix using xmlns:multicast="http://www.mulesoft.org/schema/mule/multicast"
** Define the schema location with http://www.mulesoft.org/schema/mule/multicast http://www.mulesoft.org/schema/mule/multicast/3.2/mule-multicast.xsd
* Define one or more connectors for Multicast endpoints.
** Create a Multicast connector:

[source]
----
<multicast:connector name="multicastConnector"/>
----

* Create Multicast endpoints.
** Datagrams are received on inbound endpoints. The bytes in the datagram become the message payload.
** Datagrams are sent to outbound endpoints. The bytes in the message payload become the datagram.
** Both kinds of endpoints are identified by a host name and a port. The host name, in this case, is one of the standard IP multicast addresses defined http://www.iana.org/assignments/multicast-addresses/multicast-addresses.xml[here]. When a datagram is sent to a multicasting host/port combination, all sockets subscribed to that host and port receive the message.

Multicast endpoints are always one-way.

== Example Configurations

[tabs]
------
[tab,title="Mule Flow"]
....

*Copy datagrams from one port to another in a flow*

[source]
----
<multicast:connector name="connector"/> ❶<flow name="copy">    <multicast:inbound-endpoint host="224.0.0.0" port="4444" exchange-pattern="one-way"/> ❷    <pass-through-router>        <multicast:outbound-endpoint host="224.0.0.0" port="5555" exchange-pattern="one-way" /> ❸    </pass-through-router></flow>
----

....
[tab,title="Mule Service"]
....

*Copy datagrams from one port to another in a service*

[source]
----
<multicast:connector name="connector"/> ❶<service name="copy>    <inbound>        <multicast:inbound-endpoint host="224.0.0.0" port="4444" exchange-pattern="one-way"/> ❷    </inbound>    <outbound>        <multicast:outbound-endpoint host="224.0.0.0" port="5555" exchange-pattern="one-way" /> ❸    </outbound></service>
----

....
------

== Configuration Options

Multicast Connector attributes

[width="99",cols="10,80,10",options="header"]
|===
|Name |Description |Default
|broadcast |Set to true to allow sending to broadcast ports. |false
|keepSendSocketOpen |Whether to keep the the socket open after sending a message. |false
|loopback |Whether to loop messages back to the socket that sent them. |false
|receiveBufferSize |The size of the largest (in bytes) datagram that can be received. |16 Kbytes
|sendBufferSize |The size of the network send buffer. |16 Kbytes
|timeout |The timeout used for both sending and receiving. |system default
|timeToLive |How long the packet stays active. This is a number betweeen 1 and 225. |System default
|===


== Configuration Reference

=== Element Listing

= Multicast Transport

The Multicast transport can dispatch Mule events using IP multicasting.

== Connector

== Inbound endpoint

=== Attributes of <inbound-endpoint...>

[width="10",cols="20,20,20,20,20",options="header']
|===
|Name |Type |Required |Default |Description
|host |string |no | |
|port |port number |no | |
|===

=== Child Elements of <inbound-endpoint...>

[width="10",cols="33,33,33",options="header"]
|===
|Name |Cardinality |Description
|===

== Outbound endpoint

=== Attributes of <outbound-endpoint...>

[width="10",cols="33,33,33",options="header"]
|===
|Name |Type |Required |Default |Description
|host |string |no | |
|port |port number |no | |
|===

=== Child Elements of <outbound-endpoint...>

[width="10",cols="33,33,33",options="header"]
|===
|Name |Cardinality |Description
|===

== Endpoint

=== Attributes of <endpoint...>

[width="10",cols="20,20,20,20,20",options="header"]
|===
|Name |Type |Required |Default |Description
|host |string |no | |
|port |port number |no | |
|===

=== Child Elements of <endpoint...>

[width="10",cols="33,33,33",options="header"]
|===
|Name |Cardinality |Description
|===

== Schema

* http://www.mulesoft.org/schema/mule/multicast/3.2/mule-multicast.xsd[Multicast Schema]
* http://www.mulesoft.org/docs/site/3.2.0/schemadocs/schemas/mule-multicast_xsd/schema-overview.html[Multicast Schema Overview]

== Javadoc API Reference

The Javadoc for this module can be found here: http://www.mulesoft.org/docs/site/current/apidocs/org/mule/transport/multicast/package-summary.html[Multicast]

== Maven

The Multicast Module can be included with the following dependency:

[source]
----
<dependency>  <groupId>org.mule.transports</groupId>  <artifactId>mule-transport-multicast</artifactId>  <version>3.2.0</version></dependency>
----

== Extending the Multicast Transport

== Best Practices

== Notes

Before Mule 3.1.1, there were two different attributes for setting timeout on Multicast connectors, `sendTimeout` and `receiveTimeout`. It was necessary to set them to the same value. Now there is only `timeout` for either send or receive.
